--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
             <p>Los blogs son la mejor forma</p>
+            <p>Holas</p>
         </div>
     </div>
     
