--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
-            <p>Y este es el párrafo de inicio</p>
+            <p>Y este es el p&aacuterrafo de inicio</p>
             <p>Los blogs son la mejor forma</p>
             <p>Holas</p>
         </div>
